--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "lerna run build"
+  },
   "devDependencies": {
+    "lerna": "^5.6.1",
     "typescript": "^4.8.4"
   }
 }
