--- a/packages/sample-monorepo-npm-package-bar/package.json
+++ b/packages/sample-monorepo-npm-package-bar/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rm -rf dist",
     "build": "yarn clean && tsc",
