--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "publish": "lerna publish --no-private"
   },
   "devDependencies": {
     "lerna": "^5.6.1",
