--- a/packages/sample-monorepo-npm-package-baz/package.json
+++ b/packages/sample-monorepo-npm-package-baz/package.json
@@ -2,14 +2,12 @@
   "name": "@himajin-dev/sample-monorepo-npm-package-baz",
   "version": "1.0.2",
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "yarn clean && tsc && tsc-alias",
+    "postbuild": "cp package.json README.md LICENSE dist/",
     "prepare": "yarn build"
   },
   "publishConfig": {
