--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "lerna run build",
-    "publish": "lerna publish --no-private"
+    "publish": "lerna publish --no-private --contents dist"
   },
   "devDependencies": {
     "lerna": "^5.6.1",
